Initial Db Core
Finalized setup of Db

--- a/OpenOrderFramework/OpenOrderFramework.csproj
+++ b/OpenOrderFramework/OpenOrderFramework.csproj
@@ -247,20 +247,22 @@
     <Compile Include="Migrations\SeedData\DesignerCatagorieSeed.cs" />
     <Compile Include="Migrations\SeedData\CategorieSeed.cs" />
     <Compile Include="Migrations\SeedData\ItemSeed.cs" />
-    <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\AdminViewModel.cs" />
-    <Compile Include="Models\Analytics.cs" />
+    <Compile Include="Models\DesignerSelection.cs" />
+    <Compile Include="Models\RegularItem.cs" />
+    <Compile Include="ViewModels\AccountViewModels.cs" />
+    <Compile Include="ViewModels\AdminViewModel.cs" />
+    <Compile Include="ViewModels\Analytics.cs" />
     <Compile Include="Models\Cart.cs" />
     <Compile Include="Models\DesignerCatagorie.cs" />
     <Compile Include="Models\Catagorie.cs" />
     <Compile Include="Models\DesignerItem.cs" />
-    <Compile Include="Models\DesignerItemChoice.cs" />
+    <Compile Include="Models\DesignerItemOptionSet.cs" />
     <Compile Include="Models\DesignerOption.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\Image.cs" />
     <Compile Include="Models\ImageGroup.cs" />
     <Compile Include="Models\Item.cs" />
-    <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="ViewModels\ManageViewModels.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\OrderDetail.cs" />
     <Compile Include="Models\ShoppingCart.cs" />
@@ -289,6 +291,8 @@
     <Content Include="Content\datepicker.less" />
     <None Include="Properties\PublishProfiles\orderframework.pubxml" />
     <Content Include="Scripts\card.js" />
+    <None Include="Properties\PublishProfiles\saoirsedesign - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\saoirsedesign - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Scripts\d3.js" />
     <Content Include="Scripts\d3.min.js" />
