--- a/OpenOrderFramework/OpenOrderFramework.csproj
+++ b/OpenOrderFramework/OpenOrderFramework.csproj
@@ -236,10 +236,12 @@
     <Content Include="Content\datepicker.css" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
+    <Content Include="Content\fonts.css" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="Content\PagedList1.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="fonts\SerendityScript.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap-datepicker.js" />
@@ -252,9 +254,16 @@
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\FontAwesome.otf" />
+    <Content Include="fonts\SerendityScript.eot" />
+    <Content Include="fonts\SerendityScript.otf" />
+    <Content Include="fonts\SerendityScript.ttf" />
+    <Content Include="fonts\SerendityScript.woff" />
+    <Content Include="fonts\SerendityScript.woff2" />
     <None Include="Properties\PublishProfiles\orderframework.pubxml" />
     <Content Include="Scripts\card.js" />
+    <None Include="Properties\PublishProfiles\saoirsedesign - FTP %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\saoirsedesign - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\saoirsedesign - Web Deploy %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\saoirsedesign - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Scripts\d3.js" />
