--- a/OpenOrderFramework/Web.config
+++ b/OpenOrderFramework/Web.config
@@ -25,8 +25,8 @@
   </nlog>
   
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=SaoirseSqlLcl;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
-    <!--<add name="DefaultConnection" connectionString="Data Source=mssql1.gear.host;database=saoirsesql;Initial Catalog=saoirsesql;uid=saoirsesql;password=Qa7K08^E5Lr^" providerName="System.Data.SqlClient" />-->
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=SaoirseSqlLcl;Integrated Security=SSPI" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=mssql1.gear.host;database=saoirsesql;Initial Catalog=saoirsesql;uid=saoirsesql;password=Qa7K08^E5Lr^" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="OrderEmail" value="lbacaj@live.com" />
